--- a/ClientApplication/scip-client-application/frontend/src/styles.css
+++ b/ClientApplication/scip-client-application/frontend/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
+h2, h3 {
+  color: #444;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
+
+
+html, body { height: 100%; }
+body { margin: 2em; font-family: Roboto, "Helvetica Neue", sans-serif; }
