--- a/ClientApplication/scip-client-application/frontend/src/app/app.component.html
+++ b/ClientApplication/scip-client-application/frontend/src/app/app.component.html
@@ -41,13 +41,17 @@
     <mat-card *ngIf="querying">Query running..</mat-card>
   </div>
   <div id="right">
-    <button [disabled]="workflowRunning" id="button2" mat-raised-button (click)="startWorkflow()">Start Workflow</button>
-    <mat-card id="blackScreen">
-      <mat-list *ngIf="workflowRunning && logs">
-        <mat-list-item *ngFor="let log of logs" style="margin: 0px;color: aliceblue">
-          {{log.isError?'[ERR] ': ''}}{{log.isoDateTime + ' '}}{{log.message}}
-        </mat-list-item>
-      </mat-list>
-    </mat-card>
+    <button [disabled]="workflowRunning" id="button2" mat-raised-button (click)="startWorkflow()">Start Workflow
+    </button>
+    <span *ngIf="workflowRunning" style="margin-left: 5px;">Receiving logs from backend...</span>
+    <div>
+      <textarea  [(ngModel)]="logs" id="blackScreen"
+                 style="font-size: 9pt;"
+                 matInput
+                 cdkTextareaAutosize
+                 #autosize="cdkTextareaAutosize"
+                 cdkAutosizeMinRows="2" readonly>
+      </textarea>
+    </div>
   </div>
 </div>
